service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: react-ken-frontend
  name: react-ken-frontend
  namespace: ken-kub
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: react-ken-frontend
  type: ClusterIP
status:
  loadBalancer: {}
