ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: react-ken-frontend
  namespace: ken-kub
spec:
  rules:
  - host: ken-ubuntu.saksiam.corp
    http:
      paths:
      - backend:
          service:
            name: react-ken
            port:
              number: 8080
        path: /react-ken/
        pathType: Prefix
status:
  loadBalancer: {}
